tests/InvalidFixture/Fixtures/MissingSelf/Input/MissingSelfRequestData.php
<?php

declare(strict_types=1);

namespace PTGS\TypeBridge\Tests\InvalidFixture\Fixtures\MissingSelf\Input;

final class MissingSelfRequestData
{
    public ?string $title = null;
}
